Fix For Alignment Bug

--- a/index.css
+++ b/index.css
@@ -11,7 +11,8 @@ body {
 }
 pre {
   color: green;
+  background-color: white;
   font-size: 16px;
-  text-align: center;
   height: auto;
+  width: 100vw;
 }
